[package]
name = "ddstats-rust"
version = "0.6.10+5"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
ddcore-rs = { version = "0.3.4", features = ["memory", "ddinfo", "ddcl_submit", "logger", "ddreplay"] }
tonic = "0.8.0"
discord-rich-presence = "0.2.2"
prost = "0.11"
tui = { version = "0.18.0", default-features = false, features = ["serde", "crossterm"]}
crossterm = "0.25.0"
ron = "0.7.1"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
log = "0.4"
simple-logging = "2.0"
regex = "1.6"
futures = "0.3"
tokio = { version = "1.20.1", default-features = false, features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
log-panics = "2.1"
num-traits = "0.2"
num-derive = "0.3"
hyper = "0.14"
hyper-rustls = { version = "0.23" }
rustls = { version = "0.20" }
warp = { version = "0.3.2", features = ["tls"] }
lazy_static = "1.4"
clipboard = "0.5.0"
tokio-tungstenite = { version = "0.17.2", features = ["rustls-tls-native-roots"] }
anyhow = "1.0"
arc-swap = "1.5"
obake = "1.0"
clap = { version = "3.2.16", features = ["derive"] }
chashmap = "2.2"
ctrlc = { version = "3.2", features = ["termination"] }
self_update = { version = "0.30.0", features = ["archive-zip", "rustls", "compression-zip-deflate"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32", "winuser", "wincon"] }
trayicon = { version = "0.1.3", features = [] }
winconsole = "0.11.1"
winreg = "0.10.1"

[build-dependencies]
tonic-build = { version = "0.8.0", features = ["prost"] }
target_build_utils = "0.3.1"
winres = "0.1"

